--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
   "name": "draggable-modifier",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "description": "The default blueprint for ember-cli addons.",
   "keywords": [
-    "ember-addon"
+    "ember-addon",
+    "modifier",
+    "hammerjs",
+    "hammer.js"
   ],
   "repository": "",
   "license": "MIT",
-  "author": "",
+  "author": "ollar",
   "directories": {
     "doc": "doc",
     "test": "tests"
@@ -24,7 +27,8 @@
   },
   "dependencies": {
     "ember-cli-babel": "^7.22.1",
-    "ember-cli-htmlbars": "^5.3.1"
+    "ember-cli-htmlbars": "^5.3.1",
+    "hammerjs": "^2.0.8"
   },
   "devDependencies": {
     "@ember/optional-features": "^2.0.0",
@@ -42,6 +46,7 @@
     "ember-export-application-global": "^2.0.1",
     "ember-load-initializers": "^2.1.1",
     "ember-maybe-import-regenerator": "^0.1.6",
+    "ember-modifier": "^2.1.1",
     "ember-qunit": "^4.6.0",
     "ember-resolver": "^8.0.2",
     "ember-source": "~3.21.1",
