--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "name": "draggable-modifier",
   "version": "1.0.0",
-  "description": "The default blueprint for ember-cli addons.",
+  "description": "Modifier wrapper over Hammer.js library to drag elements",
   "keywords": [
     "ember-addon",
     "modifier",
     "hammerjs",
-    "hammer.js"
+    "hammer.js",
+    "draggable"
   ],
-  "repository": "",
+  "repository": "github:ollar/draggable-modifier",
   "license": "MIT",
   "author": "ollar",
   "directories": {
