chore: github actions dev

--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "edition": "octane"
   },
   "ember-addon": {
-    "configPath": "tests/dummy/config"
+    "configPath": "tests/dummy/config",
+    "demoURL": "https://ollar.github.io/draggable-modifier"
   }
 }
